--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,10 @@
-﻿[theme]
+﻿mkdir .streamlit -Force
+Set-Content -Path .streamlit\config.toml -Encoding ASCII -Value @'
+[theme]
 base="dark"
 primaryColor="#7c3aed"
 backgroundColor="#0b1220"
 secondaryBackgroundColor="#111a2e"
 textColor="#e5e7eb"
 font="sans serif"
+'@
